[gd_scene load_steps=2 format=3 uid="uid://bwjkl3m4n5o6p"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu_controller.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="DisplaySection" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="PanelContainer/VBoxContainer/DisplaySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Display"

[node name="FullscreenCheckbox" type="CheckButton" parent="PanelContainer/VBoxContainer/DisplaySection"]
layout_mode = 2
button_pressed = true
text = "Fullscreen"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Audio"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/MasterVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 5.0
value = 100.0

[node name="ValueLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/MasterVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="SFXVolumeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/SFXVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 5.0
value = 100.0

[node name="ValueLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/SFXVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/MusicVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBoxContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 5.0
value = 80.0

[node name="ValueLabel" type="Label" parent="PanelContainer/VBoxContainer/AudioSection/MusicVolumeContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResetDefaultsButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Reset Defaults"

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Close"
